--- a/a15-testing-pratica1/pom.xml
+++ b/a15-testing-pratica1/pom.xml
@@ -38,11 +38,20 @@
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.13</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.16</version>
         </dependency>
     </dependencies>
 
